# morbirari

./: .gitattributes  .gitignore  CLAUDE.md  DATA_LICENSES.md  DISCLAIMER.md  README.md  TODO.md  docker-compose.yml
.claude/: launch.json
.claude/agents/: adaptador-etl.md  calidad-de-busqueda.md  esquema-migraciones.md  revisor-de-fuentes-licencias.md  traductor-de-idiomas.md
.github/workflows/: ci.yml  (+1 more)
docs/: redesign_proposal.md
etl/: alembic.ini  pyproject.toml
etl/src/morbirari_etl/: __main__.py  config.py  db.py
etl/src/morbirari_etl/indexers/: meilisearch.py
etl/src/morbirari_etl/loaders/: postgres.py  science.py
etl/src/morbirari_etl/migrations/: env.py
etl/src/morbirari_etl/migrations/versions/: 17be4b438c90_dashboard_genes_fenotipos_epidemiologia_.py  194f5c3a69c6_ensayos_clinicos_y_farmacos_huerfanos.py  c3d5f0a1b2e4_organizaciones_de_pacientes_gard.py  f9df89f2c6c2_esquema_inicial_fase_1.py
etl/src/morbirari_etl/models/: orphanet.py
etl/src/morbirari_etl/sources/: base.py
etl/src/morbirari_etl/sources/clinicaltrials/: trials.py
etl/src/morbirari_etl/sources/ema/: orphan_drugs.py
etl/src/morbirari_etl/sources/gard/: organizations.py
etl/src/morbirari_etl/sources/hpo/: translations.py
etl/src/morbirari_etl/sources/nando/: japan.py
etl/src/morbirari_etl/sources/orphanet/: classifications.py  nomenclature.py  science.py
etl/tests/: test_drug_matching.py  test_gard.py  test_license_guard.py  test_orphanet_parser.py  test_search_quality.py
etl/tests/fixtures/orphanet/: ORPHA_OMIM_mapping_en_2026.xml  ORPHAnomenclature_en_2026.xml
(+44 files in other folders)
